# min_name_classifier

./: .gitignore  .python-version  LICENSE  README.md  build_names_dataset.py  min_name_classifier.ipynb  pyproject.toml
min_name_classifier/: conll_2003.ipynb  names_dataset.ipynb  utils.py
